--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,3 +11,5 @@ yew-router = { git = "https://github.com/yewstack/yew.git" }
 log = "0.4.6"
 wasm-logger = "0.2.0"
 comrak = "0.22"
+
+[dev-dependencies]
